# maverick

./: .clippy.toml  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  rustfmt.toml
.cargo/: audit.toml  config.toml
.cursor/rules/: rust-best-practices.mdc  rust-clean-code.mdc  rust-linter-configuration.mdc  rust-no-magic-values.mdc  rust-solid-hexagonal.mdc
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  stability_incident.md
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  QUALITY-CHECKLIST.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  write_summary.js
crates/maverick-adapter-persistence-sqlite/: Cargo.toml
crates/maverick-adapter-persistence-sqlite/src/: diag.rs  lib.rs  limits.rs  persisted_device_class.rs  persistence.rs  schema.rs  schema.sql  sqlite_op.rs
crates/maverick-adapter-persistence-sqlite/src/persistence/: busy.rs  lns_ops.rs  mod.rs  pressure.rs  pruning.rs  repos.rs  sql.rs
crates/maverick-adapter-radio-spi/: Cargo.toml  README.md  build.rs
crates/maverick-adapter-radio-spi/src/: bindings.rs  ingress_identity.rs  lgw_bindings.rs  lgw_convert.rs  lgw_init.rs  lib.rs  spi_uplink.rs
crates/maverick-adapter-radio-udp/: Cargo.toml
crates/maverick-adapter-radio-udp/src/: gwmp.rs  gwmp_udp_uplink_source.rs  lib.rs  limits.rs  resilient.rs  stub.rs  udp_downlink.rs  uplink_ingress.rs
crates/maverick-cloud-core/: Cargo.toml
crates/maverick-cloud-core/src/: lib.rs
crates/maverick-core/: Cargo.toml
crates/maverick-core/src/: config.rs  error.rs  lib.rs  lns_config.rs  storage_profile.rs
crates/maverick-core/src/adapters/persistence/: circular_uplink_buffer.rs  mod.rs  sqlite_audit_log.rs  sqlite_device_repository.rs  sqlite_downlink_repository.rs  sqlite_gateway_repository.rs  sqlite_session_repository.rs  sqlite_uplink_repository.rs  sqlite_utils.rs
crates/maverick-core/src/api/: dto.rs  mod.rs  routes.rs
crates/maverick-core/src/db/: backend_selector.rs  batch_writer.rs  database.rs  mod.rs  schema.sql  sqlite.rs
crates/maverick-core/src/events/: mod.rs
crates/maverick-core/src/health/: mod.rs
crates/maverick-core/src/host/: mod.rs
crates/maverick-core/src/ingester/: mod.rs  semtech.rs  udp.rs
crates/maverick-core/src/kernel/: gateway_selector.rs  mod.rs
crates/maverick-core/src/ports/: audit_log.rs  audit_sink.rs  device_repository.rs  downlink_repository.rs  gateway_repository.rs  mod.rs  radio_transport.rs  session_repository.rs  uplink_ingress.rs  uplink_repository.rs  uplink_source.rs
crates/maverick-core/src/protocol/: capability.rs  lorawan_10x_class_a.rs  mac_commands.rs  mod.rs
crates/maverick-core/src/storage/: mod.rs  policy.rs  pressure.rs
crates/maverick-core/src/use_cases/: device_management.rs  downlink_delivery_service.rs  ingest_uplink.rs  mod.rs  process_downlink_frame.rs  process_uplink_frame.rs  retention.rs
crates/maverick-core/tests/: integration_test.rs
crates/maverick-crypto/: Cargo.toml
crates/maverick-crypto/src/: aes_ctr.rs  cmac.rs  error.rs  lib.rs  lorawan.rs
crates/maverick-domain/: Cargo.toml
crates/maverick-domain/src/: identifiers.rs  lib.rs  region.rs  session.rs
crates/maverick-domain/src/entities/: device.rs  downlink.rs  gateway.rs  mod.rs  uplink.rs  uplink_frame.rs
crates/maverick-domain/src/types/: mod.rs
crates/maverick-extension-contracts/: Cargo.toml  README.md
crates/maverick-extension-tui/: Cargo.toml  README.md
crates/maverick-extension-tui/src/: config.rs  console_ui.rs  doctor.rs  edge_runner.rs  ingest_loop.rs  lns_file.rs  lns_wizard.rs  main.rs  menu_interactive.rs  menu_lorawan.rs  profiles.rs  setup_wizard.rs
crates/maverick-integration-tests/: Cargo.toml
crates/maverick-integration-tests/src/: lib.rs
crates/maverick-integration-tests/tests/: class_a_downlink.rs  operator_local_gateway_e2e.rs  persistence_sqlite.rs  radio_transport_resilience.rs  smoke.rs  watchdog.rs
crates/maverick-runtime-edge/: Cargo.toml
crates/maverick-runtime-edge/src/: cli_constants.rs  commands.rs  edge_json.rs  lib.rs  main.rs  paths.rs  probe.rs  radio_ingest_selection.rs  runtime_capabilities.rs  update.rs  watchdog.rs
crates/maverick-runtime-edge/src/commands/: config.rs
crates/maverick-runtime-edge/src/ingest/: downlink.rs  gwmp_loop.rs  lns_guard.rs  mod.rs
crates/maverick-runtime-edge/src/update/: cli.rs  download.rs  version.rs
deploy/profiles/: edge.env  gateway.env  server.env
deploy/systemd/: maverick-edge.service
docs/: 00-product-intent.md  01-execution-plan.md  02-delivery-checklist.md  03-operating-model.md  04-sprint-1-executable-plan.md  05-test-program.md  README.md  ai-readiness.md  business-rules.md  code-review-checklist.md  compatibility-matrix.md  extensibility.md  extensions.md  frontier-runtime.md  hardware-registry.toml  install-console-ux-contract.md  install-onboarding-ux-spec.md  install.md  kernel-boundary.md  lns-config.md  management-api.md  maverick-console-ux-spec.md  release-policy.md  runbook-edge.md  slice-2-evidence.md  slice-3-evidence.md  slice-4-evidence.md  udp-ingester.md  vision.md
docs/adr/: 0001-hexagonal-kernel.md
docs/debug/: rakpi-spi-failure-2026-04-29.md
etc/: maverick-update.service  maverick-update.timer  maverick.toml
scripts/: build-linux-aarch64-preview.sh  e2e-rakpi-prepush.sh  gen_config_h.sh  install-linux.sh  install.sh  maverick-reset-spi.sh  run-profile.sh  verify-release-cross-builds.sh
tests/: devices_api_test.rs  integration_test.rs  udp_ingester_test.rs
(+112 files in other folders)
