[workspace]
resolver = "2"
members = [
    "crates/maverick-domain",
    "crates/maverick-core",
    "crates/maverick-extension-contracts",
    "crates/maverick-adapter-radio-udp",
    "crates/maverick-runtime-edge",
    "crates/maverick-cloud-core",
    "crates/maverick-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Antony <antony@example.com>"]
license = "MIT"
repository = "https://github.com/example/maverick-core"

[workspace.dependencies]
maverick-domain = { path = "crates/maverick-domain", version = "0.1.0" }
maverick-core = { path = "crates/maverick-core", version = "0.1.0" }
maverick-extension-contracts = { path = "crates/maverick-extension-contracts", version = "0.1.0" }
maverick-adapter-radio-udp = { path = "crates/maverick-adapter-radio-udp", version = "0.1.0" }
maverick-runtime-edge = { path = "crates/maverick-runtime-edge", version = "0.1.0" }
maverick-cloud-core = { path = "crates/maverick-cloud-core", version = "0.1.0" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
sysinfo = "0.30"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
