[workspace]
resolver = "2"
members = [
    "crates/maverick-domain",
    "crates/maverick-core",
    "crates/maverick-extension-contracts",
    "crates/maverick-extension-tui",
    "crates/maverick-adapter-radio-udp",
    "crates/maverick-adapter-radio-spi",
    "crates/maverick-adapter-persistence-sqlite",
    "crates/maverick-runtime-edge",
    "crates/maverick-cloud-core",
    "crates/maverick-integration-tests",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Antony Giomar <antonygiomarxdev@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/antonygiomarxdev/maverick"

[workspace.dependencies]
maverick-domain = { path = "crates/maverick-domain", version = "1.0.0" }
maverick-core = { path = "crates/maverick-core", version = "1.0.0" }
maverick-extension-contracts = { path = "crates/maverick-extension-contracts", version = "1.0.0" }
maverick-adapter-radio-udp = { path = "crates/maverick-adapter-radio-udp", version = "1.0.0" }
maverick-adapter-radio-spi = { path = "crates/maverick-adapter-radio-spi", version = "1.0.0", default-features = false }
maverick-adapter-persistence-sqlite = { path = "crates/maverick-adapter-persistence-sqlite", version = "1.0.0" }
maverick-runtime-edge = { path = "crates/maverick-runtime-edge", version = "1.0.0" }
maverick-cloud-core = { path = "crates/maverick-cloud-core", version = "1.0.0" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
sysinfo = "0.30"
rusqlite = { version = "0.33", features = ["bundled"] }

# Workspace lint baseline (Cargo `[lints]` / Rust 1.74+). There is no single "Airbnb ESLint"
# equivalent for Rust; teams combine rustfmt + Clippy `-D warnings` + a small shared deny/warn
# set. See AGENTS.md and `.cursor/skills/rust-linter-configuration/SKILL.md`.
[workspace.lints.rust]
unused_must_use = "deny"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
