[package]
name = "maverick-adapter-persistence-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite persistence adapter for Maverick edge (sessions, uplinks, audit)"

[dependencies]
maverick-core = { workspace = true }
maverick-domain = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[lib]
test = false
