[package]
name = "maverick-adapter-radio-spi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SX1302/SX1303 SPI concentrator adapter (libloragw integration; feature-gated)"

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = []
spi = ["dep:cc"]

[dependencies]
maverick-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[lints]
workspace = true
