[package]
name = "maverick-adapter-radio-spi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SX1302/SX1303 SPI concentrator adapter (libloragw integration; feature-gated)"

[build-dependencies]
cc = "1"

[features]
default = []
spi = []

[dependencies]
maverick-core = { workspace = true }
maverick-domain = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tracing = { workspace = true }

[lints]
workspace = true
