[package]
name = "maverick-adapter-radio-udp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UDP radio transport adapter (Semtech-style path to be implemented)"

[dependencies]
maverick-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "sync"] }

[dev-dependencies]
maverick-domain = { workspace = true }

[lints]
workspace = true
