[package]
name = "maverick-adapter-radio-udp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UDP radio transport adapter (Semtech-style path to be implemented)"

[dependencies]
maverick-core = { workspace = true }
maverick-domain = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
[lints]
workspace = true
