[package]
name = "maverick-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Maverick application kernel: use cases, ports, protocol policies"

[dependencies]
maverick-domain = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
