[package]
name = "maverick-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Maverick domain types and value objects (no I/O)"

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
