[package]
name = "maverick-extension-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optional terminal UI extension for maverick-edge operator UX"

[[bin]]
name = "maverick-edge-tui"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
maverick-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
