[package]
name = "maverick-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
maverick-core = { workspace = true }
maverick-domain = { workspace = true }
maverick-extension-contracts = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
maverick-adapter-persistence-sqlite = { workspace = true }
maverick-adapter-radio-udp = { workspace = true }
rusqlite = { workspace = true }
tempfile = "3"

[lints]
workspace = true
