[package]
name = "maverick-runtime-edge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Edge runtime composition: CLI, install profile, hardware probe"

[[bin]]
name = "maverick-edge"
path = "src/main.rs"

[dependencies]
maverick-core = { workspace = true }
maverick-domain = { workspace = true }
maverick-adapter-persistence-sqlite = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sysinfo = { workspace = true }

[lints]
workspace = true
